Update headshot, add title

--- a/index.html
+++ b/index.html
@@ -36,9 +36,10 @@
 </head>
 
 <body   class="no-sidebar"  >
+<h1 style="text-align: center;margin-top: 1em;">Jamie Penney</h1>
   <header role="banner">
     <hgroup>
-      <a href="/"><img src="/images/headshot.png" style="width:170px;height:170px;" /></a>
+      <a href="/"><img src="/images/headshot2.png" style="width:200px;height:200px;" /></a>
     </hgroup>
 
 </header>
